# machine32

./: .gitmodules  AGENT.md  CMakeLists.txt  README.md  config_A.json  object.md  platformio.ini  post_build_ui_script.py  pre_build_screen_script.py  screen.md
src/: Core.h  backend_main.cpp  config.cpp
src/App/: App.cpp
src/Controller/: IEncoder.cpp  IStepper.h  IStepperParam.h  Registry.h
src/Machine/Types/: MachineSpec_A.cpp  MachineSpec_TypeTemplate.cpp.txt
src/Screen/: BOOT.h  BOOT_example.cpp  Screen.cpp  Screen.h  generic_page.h  load_page.h  main.h  main_menu.h  main_menu_controller.cpp  main_menu_controller.h  page.h  page_factory.cpp  page_factory.h  runtime.cpp  runtime.h
src/Screen/Pages/: main_menu_page.cpp  main_menu_page.h
src/Screen/page/: README.md
src/Screen/page/main/: INIT.cpp  INIT.h  info.h  input.h  load.h  main.h
src/State/: Scene.cpp
src/State/Device/: Boot.h
src/UI/Service/: pPaper.cpp  pPaper.h
